--- a/index.html
+++ b/index.html
@@ -186,18 +186,20 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            text-align: center;
         }
 
         .creator-info {
             display: flex;
+            flex-direction: column;
             align-items: center;
             gap: 0.75rem;
-            margin-top: 0.5rem;
+            margin-top: 1rem;
         }
 
         .profile-icon {
-            width: 32px;
-            height: 32px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             border: 2px solid rgba(255, 255, 255, 0.3);
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -300,6 +302,7 @@
 
             .hero-section {
                 padding: 2rem 1.5rem;
+                border-radius: 20px;
             }
 
             .logo {
@@ -308,28 +311,60 @@
             }
 
             h1 {
-                font-size: 2.25rem;
+                font-size: 2rem;
+                margin-bottom: 1rem;
             }
 
             .stats {
                 flex-direction: column;
                 align-items: center;
+                gap: 0.75rem;
+                margin-bottom: 1.25rem;
             }
 
             .stat-badge {
-                font-size: 0.85rem;
+                font-size: 0.8rem;
+                padding: 0.4rem 0.8rem;
+                width: fit-content;
             }
 
             .tagline {
-                font-size: 1.1rem;
+                font-size: 1rem;
+                line-height: 1.5;
+                margin-bottom: 2rem;
             }
 
             .cta-button {
-                padding: 0.875rem 1.75rem;
+                padding: 0.875rem 1.5rem;
                 font-size: 1rem;
                 display: block;
                 margin: 0.75rem auto;
                 max-width: 280px;
+                border-radius: 40px;
+            }
+
+            .creator-section {
+                margin-top: 2.5rem;
+                padding-top: 1.5rem;
+            }
+
+            .creator-text {
+                font-size: 0.9rem;
+                margin-bottom: 0.75rem;
+            }
+
+            .creator-info {
+                gap: 0.5rem;
+                margin-top: 0.75rem;
+            }
+
+            .profile-icon {
+                width: 36px;
+                height: 36px;
+            }
+
+            .creator-link {
+                font-size: 0.95rem;
             }
         }
     </style>
