add share card references

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salesforce Developer GPT</title>
+    <meta name="description" content="Sick of having to say 'in Apex' or 'for Salesforce' when using ChatGPT? Use Salesforce Developer instead. #2 Most Popular Salesforce ChatGPT with 25K+ chats.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-domain.com/">
+    <meta property="og:title" content="Salesforce Developer GPT">
+    <meta property="og:description" content="Sick of having to say 'in Apex' or 'for Salesforce' when using ChatGPT? Use Salesforce Developer instead. #2 Most Popular Salesforce ChatGPT with 25K+ chats.">
+    <meta property="og:image" content="https://your-domain.com/og-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://your-domain.com/">
+    <meta property="twitter:title" content="Salesforce Developer GPT">
+    <meta property="twitter:description" content="Sick of having to say 'in Apex' or 'for Salesforce' when using ChatGPT? Use Salesforce Developer instead. #2 Most Popular Salesforce ChatGPT with 25K+ chats.">
+    <meta property="twitter:image" content="https://your-domain.com/og-image.png">
+    
     <style>
         * {
             margin: 0;
