fix share image domain

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com/">
+    <meta property="og:url" content="https://julian88tex.github.io/sfdevgpt/">
     <meta property="og:title" content="Salesforce Developer GPT">
     <meta property="og:description" content="Sick of having to say 'in Apex' or 'for Salesforce' when using ChatGPT? Use Salesforce Developer instead. #2 Most Popular Salesforce ChatGPT with 25K+ chats.">
-    <meta property="og:image" content="https://your-domain.com/og-image.png">
+    <meta property="og:image" content="https://julian88tex.github.io/sfdevgpt/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://your-domain.com/">
+    <meta property="twitter:url" content="https://julian88tex.github.io/sfdevgpt/">
     <meta property="twitter:title" content="Salesforce Developer GPT">
     <meta property="twitter:description" content="Sick of having to say 'in Apex' or 'for Salesforce' when using ChatGPT? Use Salesforce Developer instead. #2 Most Popular Salesforce ChatGPT with 25K+ chats.">
-    <meta property="twitter:image" content="https://your-domain.com/og-image.png">
+    <meta property="twitter:image" content="https://julian88tex.github.io/sfdevgpt/og-image.png">
     
     <style>
         * {
